--- a/serverless.yml
+++ b/serverless.yml
@@ -75,17 +75,82 @@ custom:
   documentation:
     version: '1'
     title: 'Calculator API'
-    description: 'This is a sample API'
-    models: {}
+    description: 'This is a calculator API'
+    models:
+      - name: "AuthenticationSucceeded"
+        description: "Authentication succeeded with JWT Token in the response"
+        contentType: "application/json"
+        #schema: ${file(components/schemas/AuthenticationSucceeded)}
+      - name: "ErrorResponse"
+        description: "An invalid request error"
+        contentType: "application/json"
+        #schema: ErrorResponse
+      - name: "ErrorResponse"
+        description: "Unauthorized error. Wrong credentials"
+        contentType: "application/json"
+        #schema: ${file(components/schemas/ErrorResponse)}
+      - name: "ErrorResponse"
+        description: " Unknown server error"
+        contentType: "application/json"
+        #schema: ${file(components/schemas/ErrorResponse)}
 
 functions:
   get_user_operations:
     handler: src/api/v1/operations/get_user_operations/get_user_operations_handler.get_user_operations
+    timeout: 100
     events:
       - http:
           method: get
           path: api/v1/operations
           cors: true
+          documentation:
+            summary: Get user operations records
+            description: Get historical operation records for an user 
+            tags:
+              - Get-operations	
+            queryParams:
+              - name: "page_number"
+                description: "Number page for pagination"
+                schema:
+                  type: "number"
+              - name: "rows_per_page"
+                description: "Rows per page for pagination"
+                schema:
+                  type: "number"
+              - name: "sort_by"
+                description: "Sort by Data table header value"
+                schema:
+                  type: "string"
+              - name: "sort_type"
+                description: "Sorting by ascendent or descendent order"
+                schema:
+                  type: "string"
+              - name: "operation_id"
+                description: "Filter by operation id value"
+                schema:
+                  type: "string"
+            methodResponses:
+              - statusCode: 200
+                responseBody:
+                  description: "Get operation Successfully completed"
+                responseModels:
+                  application/json: "PutDocumentResponse"
+              - statusCode: 401
+                responseBody:
+                  description: Missing Authorization Header.
+                responseModels:
+                  application/json: 'ErrorResponse'
+              - statusCode: 500
+                responseBody:
+                  description: "Internal Server Error."
+                responseModels:
+                  application/json: "ErrorResponse"
+              - statusCode: 502
+                responseBody:
+                  description: "timeout error"
+                responseModels:
+                  application/json: "ErrorResponse"
+            
     environment:
       AURORA_DB_SECRET_ARN: !Ref AuroraDBSecret
       AURORA_DB_CLUSTER_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${AuroraDBCluster}
@@ -96,7 +161,7 @@ functions:
     handler: src/data/seed_data/db_migration.handler
     memorySize: 512
     timeout: 100
-    dependsOn: [AuroraDBClusterSecretAttachment, DBMigrationLogGroup]
+    dependsOn: [AuroraDBClusterSecretAttachment, DBMigrationLogGroup, CalculatorTable]
     environment:
       AURORA_DB_SECRET_ARN: !Ref AuroraDBSecret
       AURORA_DB_CLUSTER_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${AuroraDBCluster}
@@ -106,8 +171,92 @@ functions:
     events:
       - http:
           method: post
-          path: api/v1/operations/perform_operation
+          path: api/v1/operations
           cors: true
+          documentation:
+            summary: User performed a new arithmetical operation
+            description: User performed a new arithmetical operation
+            tags:
+              - New-operation
+            requestBody:
+              description: "An operation object"
+            methodResponses:
+              - statusCode: 200
+                responseBody:
+                  description: "Operation performed Successfully"
+                responseModels:
+                  application/json: "Response"
+              - statusCode: 400
+                responseBody:
+                  description: "Bad Request"
+                responseModels:
+                  application/json: 'ErrorResponse'
+              - statusCode: 401
+                responseBody:
+                  description: "Wrong or expired credentials"
+                responseModels:
+                  application/json: 'ErrorResponse'
+              - statusCode: 500
+                responseBody:
+                  description: "Internal Server Error."
+                responseModels:
+                  application/json: "ErrorResponse"
+              - statusCode: 502
+                responseBody:
+                  description: "timeout error"
+                responseModels:
+                  application/json: "ErrorResponse"
+ 
+    environment:
+      AURORA_DB_SECRET_ARN: !Ref AuroraDBSecret
+      AURORA_DB_CLUSTER_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${AuroraDBCluster}
+
+  delete_operation_handler:
+    handler: src/api/v1/operations/delete_operation/delete_operation_handler.delete_operation
+    events:
+      - http:
+          method: delete
+          path: api/v1/operations/{operation_id}
+          cors: true
+          documentation:
+            summary: User delete/invalidate an operation record
+            description: User performed a soft delete from an operation record
+            pathParams:
+              - name: "operation_id"
+                description: "The record operation's id"
+                schema:
+                  type: "string"
+            tags:
+              - Delete-operation
+            requestBody:
+              description: "An operation record id"
+            methodResponses:
+              - statusCode: 200
+                responseBody:
+                  description: "Operation deleted Successfully"
+                responseModels:
+                  application/json: "SuccessResponse"
+              - statusCode: 400
+                responseBody:
+                  description: "Bad Request"
+                responseModels:
+                  application/json: 'ErrorResponse'
+              - statusCode: 401
+                responseBody:
+                  description: "Wrong or expired credentials"
+                responseModels:
+                  application/json: 'ErrorResponse'
+              - statusCode: 500
+                responseBody:
+                  description: "Internal Server Error."
+                responseModels:
+                  application/json: "ErrorResponse"
+              - statusCode: 502
+                responseBody:
+                  description: "timeout error"
+                responseModels:
+                  application/json: "ErrorResponse"
+ 
     environment:
       AURORA_DB_SECRET_ARN: !Ref AuroraDBSecret
       AURORA_DB_CLUSTER_ARN: !Sub arn:aws:rds:${AWS::Region}:${AWS::AccountId}:cluster:${AuroraDBCluster}
@@ -119,6 +268,39 @@ functions:
           method: post
           path: api/v1/auth
           cors: true
+          documentation:
+            summary: User login
+            description: User login
+            tags:
+              - login-operation
+            requestBody:
+              description: "An user credentials object"
+            methodResponses:
+              - statusCode: 200
+                responseBody:
+                  description: "Logged Successfully"
+                responseModels:
+                  application/json: "SuccessResponse"
+              - statusCode: 400
+                responseBody:
+                  description: "Bad Request"
+                responseModels:
+                  application/json: 'ErrorResponse'
+              - statusCode: 401
+                responseBody:
+                  description: "Wrong or expired credentials"
+                responseModels:
+                  application/json: 'ErrorResponse'
+              - statusCode: 500
+                responseBody:
+                  description: "Internal Server Error."
+                responseModels:
+                  application/json: "ErrorResponse"
+              - statusCode: 502
+                responseBody:
+                  description: "timeout error"
+                responseModels:
+                  application/json: "ErrorResponse"
 
 resources:
   Resources:
@@ -144,7 +326,7 @@ resources:
           AutoPause: true
           MaxCapacity: 4
           MinCapacity: 2
-          SecondsUntilAutoPause: 1200
+          SecondsUntilAutoPause: 300
         MasterUsername: !Join ['', ['{{resolve:secretsmanager:', !Ref AuroraDBSecret, ':SecretString:username}}']]
         MasterUserPassword: !Join ['', ['{{resolve:secretsmanager:', !Ref AuroraDBSecret, ':SecretString:password}}']]
         DeletionProtection: false
