--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,16 @@ python-dotenv==1.0.0
 boto3-stubs
 boto3-stubs[essential]
 requests==2.28.2
-pytest==7.2.2
-
 crhelper==2.0.5
 
 # sqlalchemy and Data API dialect
-# sqlalchemy==1.3.13
 psycopg2-binary==2.9.1
 psycopg2==2.9.1
 sqlalchemy==1.4
 aurora-data-api==0.4.0
 sqlalchemy-aurora-data-api==0.4.1
+
+# Dev dependencies - They will not be deployed since are included in the noDeplopy list in serverless.yaml
+pytest==7.2.2
+pylint==2.17.1
+pylance==0.3.18
