--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
-aws_lambda_powertools==2.9.1
-pydantic==1.10.6
 pyjwt==2.6.0
 cryptography==3.4.8
 bcrypt==3.2.2
 boto3==1.26.88
 python-dotenv==1.0.0
-boto3-stubs
-boto3-stubs[essential]
 requests==2.28.2
 crhelper==2.0.5
+
+# Types checking
+pydantic==1.10.6
+aws_lambda_powertools==2.9.1
+mypy_boto3_dynamodb
+boto3-stubs
+boto3-stubs[essential]
 
 # sqlalchemy and Data API dialect
 psycopg2-binary==2.9.1
@@ -16,6 +19,7 @@ psycopg2==2.9.1
 sqlalchemy==1.4
 aurora-data-api==0.4.0
 sqlalchemy-aurora-data-api==0.4.1
+
 
 # Dev dependencies - They will not be deployed since are included in the noDeplopy list in serverless.yaml
 pytest==7.2.2
