Update api pull request workflow

--- a/.github/workflows/api-pull-request.yml
+++ b/.github/workflows/api-pull-request.yml
@@ -1,8 +1,8 @@
 name: API Pull Request
 
 on:
-  # workflow_run:
-  #   workflows: ['Github Labeler']
+  workflow_run:
+    workflows: ['Github Labeler']
   push:
     branches:
       - master
