changes in api pull request workflow

--- a/.github/workflows/api-pull-request.yml
+++ b/.github/workflows/api-pull-request.yml
@@ -3,13 +3,10 @@ name: API Pull Request
 on:
   workflow_run:
     workflows: ['Github Labeler']
-  push:
-    branches:
-      - master
 
-defaults:
-  run:
-    working-directory: test
+# defaults:
+#   run:
+#     working-directory: test
 
 jobs:
   test:
