--- a/.github/workflows/test-depends-workflow.yml
+++ b/.github/workflows/test-depends-workflow.yml
@@ -1,21 +1,21 @@
 name: Test depends workflow
 
+# on:
+#   # pull_request:
+#   #   types: [opened, synchronize, reopened, ready_for_review]
+#   workflow_run:
+#     workflows: ["Github Labeler"]
+#     types: 
+#       - completed
+
 on:
-  # pull_request:
-  #   types: [opened, synchronize, reopened, ready_for_review]
   workflow_run:
-    workflows: ['Github Labeler']
-    types: 
+    workflows: [Run Tests]
+    types:
       - completed
 
 jobs:
   on-success:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - run: echo 'The triggering workflow passed'
-  on-failure:
-    runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-    steps:
-      - run: echo 'The triggering workflow failed'
