--- a/.github/workflows/test-depends-workflow.yml
+++ b/.github/workflows/test-depends-workflow.yml
@@ -4,7 +4,7 @@ on:
   # pull_request:
   #   types: [opened, synchronize, reopened, ready_for_review]
   workflow_run:
-    workflows: ["Github Labeler"]
+    workflows: [Github Labeler]
     types:
       - completed
 
