add condition in API Pull Request Github Labeler

--- a/.github/workflows/api-pull-request.yml
+++ b/.github/workflows/api-pull-request.yml
@@ -2,13 +2,14 @@ name: API Pull Request Github Labeler
 on:
   workflow_run:
     workflows:
-      - Test depends Github Labeler
+      - Github Labeler
     types:
       - completed
 
 
 jobs:
   test-job:
+    if: ${{ github.event_name == 'push' || contains( github.event.pull_request.labels.*.name, 'github') || contains( github.event.pull_request.labels.*.name, 'api') }}
     name: API Unit Tests
     runs-on: ubuntu-latest
     steps:
@@ -29,7 +30,6 @@ jobs:
 #       - name: 'Trigger'
 #         run: echo 'The triggering workflow passed'
 
-  # if: ${{ github.event_name == 'push' || contains( github.event.pull_request.labels.*.name, 'github') || contains( github.event.pull_request.labels.*.name, 'api') }}
 
     # services:
     #   postgres:
